[package]
name = "bm_keyboard"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.13"
rdev = { version = "0.5", features = ["unstable_grab"] }

[[example]]
name = "overlay"
path = "src/overlay.rs"

[[example]]
name = "overlay_dev"
path = "src/overlay_dev.rs"

[[example]]
name = "char_demo"
path = "src/char_demo.rs"
