[package]
name = "bm_keyboard"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.13"
rdev = { version = "0.5", features = ["unstable_grab"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"

[[example]]
name = "overlay"
path = "src/overlay.rs"

[[example]]
name = "overlay_dev"
path = "src/overlay_dev.rs"

[[example]]
name = "char_demo"
path = "src/char_demo.rs"
